--- a/translations/kangyur/translations/066-003_toh245-the_sections_of_dharma.xml
+++ b/translations/kangyur/translations/066-003_toh245-the_sections_of_dharma.xml
@@ -32,7 +32,7 @@
                 <editor role="copyEditor" ref="contributors.xml#person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.12 <date>2021</date>
+                <edition>v 1.2.13 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -67,7 +67,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:05:28.89Z" user="celso">18/01/2023 17:05:28</note>
+                <note type="lastUpdated" date-time="2023-07-28T11:45:32.901Z" user="admin">28/07/2023 11:45:32</note>
             <note type="updated" update="text-version" value="v 1.01" date-time="2019-04-11T17:34:31.728Z" user="andre">v 1.01 2019</note>
                 <note type="updated" update="translation-status" value="2" date-time="2019-04-11T17:34:31.728Z" user="andre">2</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-04-12T09:10:31.779Z" user="andre">2.a</note>
@@ -91,7 +91,7 @@
     <note type="updated" update="text-version" value="1.2.6" date-time="2020-11-25T15:49:15.375Z" user="celso">Updated pending links</note>
     <note type="updated" update="text-version" value="1.2.7" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.2.8" date-time="2021-01-04T22:35:57.046Z" user="laura">Updated colophon to Bandé</note>
-    <note type="updated" update="text-version" value="1.2.9" date-time="2021-02-12T19:27:12.224Z" user="celso">"scholar" to "preceptor" in colophon</note>    <note type="updated" update="text-version" value="1.2.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.2.9" date-time="2021-02-12T19:27:12.224Z" user="celso">"scholar" to "preceptor" in colophon</note>    <note type="updated" update="text-version" value="1.2.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.2.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.2.13" date-time="2023-07-28T11:45:30.06Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -649,7 +649,7 @@
                         particular, do not be attached to it.” Thus spoke the Blessed One. </p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-066-003-68"/>
-                    <p tid="51">After the Blissful One had uttered those words, the Teacher continued, saying
+                    <p tid="51">After the Well-Gone One had uttered those words, the Teacher continued, saying
                         the following:</p>
                     <lg tid="52">
                         <l>“These bodies that arise from filth</l>
@@ -1032,15 +1032,14 @@
                             </gloss>
                         </item>
                         <item>
-                            <gloss type="person" xml:id="UT22084-066-003-120">
-                                <term>Ānanda</term>
-                                <term xml:lang="Bo-Ltn">kun dga’ bo </term>
-                                <term xml:lang="bo">ཀུན་དགའ་བོ།</term>
-                                <term xml:lang="Sa-Ltn">Ānanda</term>
-                                <term type="definition">Attendant of the Buddha and the one who is
-                                    said to have memorized the sūtras.</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-066-003-120" type="person" mode="match">
+                            <term>Ānanda</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">kun dga’ bo</term>
+                            <term xml:lang="bo" type="sourceAttested">ཀུན་དགའ་བོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ānanda</term>
+                            <term type="definition">Attendant of the Buddha and the one who is said to have memorized the sūtras.</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="person" xml:id="UT22084-066-003-121">
                                 <term>Mahākāśyapa</term>
@@ -1100,15 +1099,14 @@
                         </gloss>
                     </item>
                         <item>
-                            <gloss type="person" xml:id="UT22084-066-003-126">
-                                <term>Yeshé Dé</term>
-                                <term xml:lang="Bo-Ltn">ye shes sde </term>
-                                <term xml:lang="bo">ཡེ་ཤེས་སྡེ།</term>
-                                <term xml:lang="Sa-Ltn"/>
-                                <term type="definition">A prolific Tibetan translator active during
-                                    the late eighth and early ninth centuries.</term>
-                            </gloss>
-                        </item>
+                        <gloss xml:id="UT22084-066-003-126" type="person" mode="match">
+                            <term>Yeshé Dé</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ye shes sde</term>
+                            <term xml:lang="bo" type="sourceAttested">ཡེ་ཤེས་སྡེ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
+                            <term type="definition">A prolific Tibetan translator active during the late eighth and early ninth centuries.</term>
+                        </gloss>
+                    </item>
                         <item>
                             <gloss type="place" xml:id="UT22084-066-003-127">
                                 <term>Kapilavastu</term>
