--- a/translations/kangyur/translations/066-005_toh247-distinguishing_phenomena_and_what_is_meaningful.xml
+++ b/translations/kangyur/translations/066-005_toh247-distinguishing_phenomena_and_what_is_meaningful.xml
@@ -30,7 +30,7 @@
                 <editor role="proofreader" ref="contributors.xml#person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.14 <date>2021</date>
+                <edition>v 1.0.15 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
            <notesStmt>
-               <note type="lastUpdated" date-time="2023-01-20T19:51:58.483Z" user="celso">20/01/2023 19:51:58</note>
+               <note type="lastUpdated" date-time="2023-07-28T11:48:52.507Z" user="admin">28/07/2023 11:48:52</note>
             <note type="updated" update="text-version" value="v 1.01" date-time="2019-03-08T19:52:46.864Z" user="celso">v 1.01 2019</note>
             <note type="updated" update="text-version" value="v 1.02" date-time="2019-04-23T11:00:51.822Z" user="mike">v 1.02 2019</note>
                 <note type="updated" update="translation-status" value="2" date-time="2019-04-29T13:23:28.588Z" user="mike">2</note>
@@ -77,6 +77,7 @@
                 <note type="updated" update="text-version" value="v 0.91" date-time="2019-07-23T18:13:26.377Z" user="john">v 0.91 2019</note>
                 <note type="updated" update="text-version" value="v 1.0" date-time="2019-08-02T20:08:50.415Z" user="john">v 1.0 2019</note>
                 <note type="updated" update="translation-status" value="1" date-time="2019-08-02T20:08:50.415Z" user="john">1</note>
+             <note type="updated" update="translation-status" value="1.a" date-time="2019-08-02T20:08:50.415Z" user="admin">Note added retrospectively based on date of status '1'</note>
 <note type="updated" update="text-version" value="v 1.0.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
 <note type="updated" update="text-version" value="v 1.0.2" date-time="2019-10-27T20:52:14.964Z" user="celso">Removed slash from wylie title</note>
 <note type="updated" update="text-version" value="v 1.0.3" date-time="2020-04-03T19:01:05.97Z" user="celso">updated role attribute for author</note>
@@ -87,7 +88,7 @@
     <note type="updated" update="text-version" value="1.0.8" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.0.9" date-time="2021-01-04T22:38:19.774Z" user="laura">Updated colophon to Bandé</note>
     <note type="updated" update="text-version" value="1.0.10" date-time="2021-02-10T19:56:38.464Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.0.11" date-time="2021-06-26T04:03:58.132Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.0.12" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.0.11" date-time="2021-06-26T04:03:58.132Z" user="celso">kiṃnara to kinnara</note>    <note type="updated" update="text-version" value="1.0.12" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.0.15" date-time="2023-07-28T11:48:49.662Z" user="martina-cotter">Updated "Blissful One" to "Well-Gone One"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -422,7 +423,7 @@
                         will be seated in front of the tree of awakening, which will be bedecked
                         with various precious stones. When he attains awakening, he will become a
                         thus-gone, worthy, perfect buddha. <ref cRef="F.45.b" type="folio" xml:id="UT22084-066-005-109"/> He will be someone learned and
-                        virtuous, a blissful one, a knower of the world, a charioteer who guides
+                        virtuous, a well-gone one, a knower of the world, a charioteer who guides
                         beings, an unsurpassed being, a teacher of gods and humans, a blessed
                         buddha known as Splendorous King of Shining Light. His world will be known
                         as Painted with Many Jewels. He will have an immeasurable saṅgha of hearers.
@@ -579,72 +580,59 @@
       </gloss>
     </item>
     <item>
-      <gloss type="term" xml:id="UT22084-066-005-66">
-        <term>yakṣa</term>
-        <term xml:lang="Bo-Ltn">gnod sbyin </term>
-                            <term xml:lang="bo">གནོད་སྦྱིན།</term>
-        
-        <term xml:lang="Sa-Ltn">yakṣa</term>
-        <term type="definition">A class of beings belonging to the realm of Kubera, the god of
-          wealth.</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-066-005-66" type="term" mode="match">
+                            <term>yakṣa</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">gnod sbyin</term>
+                            <term xml:lang="bo" type="sourceAttested">གནོད་སྦྱིན།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">yakṣa</term>
+                            <term type="definition">A class of beings belonging to the realm of Kubera, the god of wealth.</term>
+                        </gloss>
+                    </item>
     <item>
-      <gloss type="term" xml:id="UT22084-066-005-67">
-        <term>gandharva</term>
-        <term xml:lang="Bo-Ltn">dri za </term>
-                            <term xml:lang="bo">དྲི་ཟ།</term>
-        
-        <term xml:lang="Sa-Ltn">gandharva</term>
-        <term type="definition">Lower class of divine being, under the control of the Guardian King
-          of the East. Capable of flight, they are often described as “celestial musicians.”</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-066-005-67" type="term" mode="match">
+                            <term>gandharva</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">gandharva</term>
+                            <term type="definition">Lower class of divine being, under the control of the Guardian King of the East. Capable of flight, they are often described as “celestial musicians.”</term>
+                        </gloss>
+                    </item>
     <item>
-      <gloss type="term" xml:id="UT22084-066-005-68">
-        <term>demigod</term>
-        <term xml:lang="Bo-Ltn">lha ma yin </term>
-                            <term xml:lang="bo">ལྷ་མ་ཡིན།</term>
-        
-        <term xml:lang="Sa-Ltn">asura</term>
-        <term type="definition">The traditional adversaries of the devas (gods) who are frequently
-          portrayed in the Brahmanical mythology as having a disruptive effect on cosmological and
-          social harmony.</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-066-005-68" type="term" mode="match">
+                            <term>demigod</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lha ma yin</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ་མ་ཡིན།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">asura</term>
+                            <!--<term type="definition">The traditional adversaries of the devas (gods) who are frequently portrayed in the Brahmanical mythology as having a disruptive effect on cosmological and social harmony.</term>-->
+                        </gloss>
+                    </item>
     <item>
-      <gloss type="term" xml:id="UT22084-066-005-69">
-        <term>garuḍa </term>
-        <term xml:lang="Bo-Ltn">nam mkha’ lding </term>
-                            <term xml:lang="bo">ནམ་མཁའ་ལྡིང་།</term>
-        
-        <term xml:lang="Sa-Ltn">garuḍa</term>
-        <term type="definition">Lower class of divine being,described as an eagle-type bird with a
-          gigantic wingspan. They were traditionally enemies of the nāgas. In the Vedas, they were
-          thought to have brought nectar from the heavens to earth.</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-066-005-69" type="term" mode="match">
+                            <term>garuḍa</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">nam mkha’ lding</term>
+                            <term xml:lang="bo" type="sourceAttested">ནམ་མཁའ་ལྡིང་།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">garuḍa</term>
+                            <term type="definition">Lower class of divine being,described as an eagle-type bird with a gigantic wingspan. They were traditionally enemies of the nāgas. In the Vedas, they were thought to have brought nectar from the heavens to earth.</term>
+                        </gloss>
+                    </item>
     <item>
-      <gloss type="term" xml:id="UT22084-066-005-70">
-        <term>kinnara</term>
-        <term xml:lang="Bo-Ltn">mi’am ci </term>
-                            <term xml:lang="bo">མིའམ་ཅི།</term>
-        
-        <term xml:lang="Sa-Ltn">kinnara</term>
-        <term type="definition">A class of semidivine beings that resemble humans to the degree that
-          their very name—which means “Is that a man?”—suggests some confusion as to their divine
-          status.</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-066-005-70" type="term" mode="match">
+                            <term>kinnara</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">mi’am ci</term>
+                            <term xml:lang="bo" type="sourceAttested">མིའམ་ཅི།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">kinnara</term>
+                            <term type="definition">A class of semidivine beings that resemble humans to the degree that their very name—which means “Is that a man?”—suggests some confusion as to their divine status.</term>
+                        </gloss>
+                    </item>
     <item>
-      <gloss type="term" xml:id="UT22084-066-005-71">
-        <term>mahoraga</term>
-        <term xml:lang="Bo-Ltn">lto ’phye chen po </term>
-        <term xml:lang="bo">ལྟོ་འཕྱེ་ཆེན་པོ།</term>
-        <term xml:lang="Sa-Ltn">mahoraga</term>
-        <term type="definition">A class of serpentine nonhuman beings.</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-066-005-71" type="term" mode="match">
+                            <term>mahoraga</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">lto ’phye chen po</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྟོ་འཕྱེ་ཆེན་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">mahoraga</term>
+                            <term type="definition">A class of serpentine nonhuman beings.</term>
+                        </gloss>
+                    </item>
     <item>
       <gloss type="term" xml:id="UT22084-066-005-72">
         <term>trichiliocosm</term>
@@ -784,16 +772,13 @@
       </gloss>
     </item>
     <item>
-      <gloss type="person" xml:id="UT22084-066-005-86">
-        <term>Yeshé Dé</term>
-        <term xml:lang="Bo-Ltn">ye shes sde </term>
-                            <term xml:lang="bo">ཡེ་ཤེས་སྡེ།</term>
-        
-        
-        <term type="definition">A prolific Tibetan translator active during the late eighth and
-          early ninth centuries.</term>
-      </gloss>
-    </item>
+                        <gloss xml:id="UT22084-066-005-86" type="person" mode="match">
+                            <term>Yeshé Dé</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ye shes sde</term>
+                            <term xml:lang="bo" type="sourceAttested">ཡེ་ཤེས་སྡེ།</term>
+                            <term type="definition">A prolific Tibetan translator active during the late eighth and early ninth centuries.</term>
+                        </gloss>
+                    </item>
     <item>
       <gloss type="person" xml:id="UT22084-066-005-87">
         <term>Śākyamuni </term>
